2010-May-25 weaver	Changed PartitionControl delay for Disable to 0.2s (greater than camera shutter width).
			Changed EbTimeouts to be hierarchical to clarify where the timeout occurs.
			Added 10ms delay in ToEventWireScheduler between flush of L1A and Disable to
			alleviate coalescing of the two.
2010-Apr-27 weaver	evgr/EvrManager now reconfigures on BeginCalibCycle.  Changed acqiris/AcqManager
			to generate ClearReadout occurrence only once until cleared.
2010-Apr-14 weaver	Changed InDatagram/Datagram relationship to inheritance rather than contains.
			Protected EbBase from crashing on late L1Accepts (after Unmap).
2010-Mar-15 weaver	Tag V01-09-00.  Added traffic shaping to segment levels.
2010-Mar-12 weaver	Refactor pds/camera classes for FCCD implementation.
2009-Dec-03 tomytsai    Update epicsArch classes to skip missing PVs and report damage, and also limit on the number of 
      no-connection errors reported to the console (or log file)
2009-Dec-03 weaver  Tag V01-08-01.  Enabled select mask in the event builder.  Fixed data
      corruption associated with event builder "cache misses" (on split events).
      Tagged top-level xtc with IncompleteContribution damage when cache-miss chunk
      writes beyond end of xtc payload (rce only - last chunk size is not maximum).
2009-Nov-18 weaver  Tag V01-06-01.  Changed ObserverLevel to take a mask of event-level nodes to monitor.
2009-Nov-12 weaver  Fix to CameraManager to configure only on Configure (not BeginCalib yet).  Fix to 
      SegmentLevel and InletWireServer to properly dissolve/allocate the stream (handling
      the event builder inputs and stream outlet wires).  Change to XtcIterator::iterate()
      to jump current hierarchy level on receipt of -1 from process() (rather than just
      out of the entire hierarchy).
2009-Nov-10 weaver  Tag V01-06-00.  Segregated bld into a separate "segment-level" event builder.